@@ -1,3 +1,8 @@
+2011-09-22  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/50491
+	* g++.dg/cpp0x/pr50491.C: New.
+
 2011-09-22  Steven G. Kargl  <kargl@gcc.gnu.org>
 
 	PR testsuite/50487
